apps/redpanda/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redpanda-console
  labels:
    app: redpanda-console
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redpanda-console
  template:
    metadata:
      labels:
        app: redpanda-console
    spec:
      containers:
        - name: redpanda-console
          image: docker.redpanda.com/redpandadata/console:v3.1.2
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: 50Mi
              cpu: 100m
            limits:
              memory: 100Mi
              cpu: 256m
