apps/redpanda/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redpanda-console
spec:
  selector:
    app: redpanda-console
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
